--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>640</width>
-    <height>530</height>
+    <height>570</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -20,43 +20,14 @@
       <x>0</x>
       <y>25</y>
       <width>640</width>
-      <height>505</height>
+      <height>525</height>
      </rect>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton">
-    <property name="geometry">
-     <rect>
-      <x>0</x>
-      <y>0</y>
-      <width>60</width>
-      <height>25</height>
-     </rect>
-    </property>
-    <property name="toolTip">
-     <string>Open Tecplot file</string>
-    </property>
-    <property name="text">
-     <string>Open</string>
-    </property>
-   </widget>
-   <widget class="QSpinBox" name="spinBox_3">
-    <property name="geometry">
-     <rect>
-      <x>60</x>
-      <y>0</y>
-      <width>50</width>
-      <height>25</height>
-     </rect>
-    </property>
-    <property name="toolTip">
-     <string>Set number of interpolation (bilinear)</string>
     </property>
    </widget>
    <widget class="QCheckBox" name="checkBox_3">
     <property name="geometry">
      <rect>
-      <x>120</x>
+      <x>10</x>
       <y>0</y>
       <width>65</width>
       <height>25</height>
@@ -72,9 +43,9 @@
    <widget class="QComboBox" name="comboBox">
     <property name="geometry">
      <rect>
-      <x>180</x>
+      <x>75</x>
       <y>0</y>
-      <width>65</width>
+      <width>70</width>
       <height>25</height>
      </rect>
     </property>
@@ -85,9 +56,9 @@
    <widget class="QCheckBox" name="checkBox_2">
     <property name="geometry">
      <rect>
-      <x>250</x>
+      <x>160</x>
       <y>0</y>
-      <width>75</width>
+      <width>80</width>
       <height>25</height>
      </rect>
     </property>
@@ -101,9 +72,9 @@
    <widget class="QSpinBox" name="spinBox">
     <property name="geometry">
      <rect>
-      <x>325</x>
+      <x>240</x>
       <y>0</y>
-      <width>50</width>
+      <width>55</width>
       <height>25</height>
      </rect>
     </property>
@@ -114,9 +85,9 @@
    <widget class="QCheckBox" name="checkBox_4">
     <property name="geometry">
      <rect>
-      <x>380</x>
+      <x>310</x>
       <y>0</y>
-      <width>75</width>
+      <width>80</width>
       <height>25</height>
      </rect>
     </property>
@@ -130,9 +101,9 @@
    <widget class="QSpinBox" name="spinBox_2">
     <property name="geometry">
      <rect>
-      <x>460</x>
+      <x>390</x>
       <y>0</y>
-      <width>50</width>
+      <width>55</width>
       <height>25</height>
      </rect>
     </property>
@@ -143,9 +114,9 @@
    <widget class="QComboBox" name="comboBox_2">
     <property name="geometry">
      <rect>
-      <x>510</x>
+      <x>470</x>
       <y>0</y>
-      <width>65</width>
+      <width>70</width>
       <height>25</height>
      </rect>
     </property>
@@ -156,9 +127,9 @@
    <widget class="QComboBox" name="comboBox_3">
     <property name="geometry">
      <rect>
-      <x>575</x>
+      <x>565</x>
       <y>0</y>
-      <width>65</width>
+      <width>70</width>
       <height>25</height>
      </rect>
     </property>
@@ -166,7 +137,131 @@
      <string>Data component for second vector axis</string>
     </property>
    </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>455</x>
+      <y>0</y>
+      <width>25</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>U:</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>550</x>
+      <y>0</y>
+      <width>25</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>V:</string>
+    </property>
+   </widget>
   </widget>
+  <widget class="QMenuBar" name="menuBar">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>640</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <widget class="QMenu" name="menuFile">
+    <property name="title">
+     <string>File</string>
+    </property>
+    <addaction name="actionOpen_Tecplot_File"/>
+    <addaction name="actionSave_Image_File"/>
+    <addaction name="separator"/>
+    <addaction name="actionExit"/>
+   </widget>
+   <widget class="QMenu" name="menuInterpolation">
+    <property name="title">
+     <string>Interpolation</string>
+    </property>
+    <addaction name="actionIncrease_Interpolation"/>
+    <addaction name="actionDecrease_Interpolation"/>
+   </widget>
+   <widget class="QMenu" name="menuAbout">
+    <property name="title">
+     <string>About</string>
+    </property>
+    <addaction name="actionAbout_FEM_Draw"/>
+    <addaction name="actionAbout_Qt"/>
+   </widget>
+   <addaction name="menuFile"/>
+   <addaction name="menuInterpolation"/>
+   <addaction name="menuAbout"/>
+  </widget>
+  <action name="actionOpen_Tecplot_File">
+   <property name="text">
+    <string>Open Tecplot File</string>
+   </property>
+   <property name="toolTip">
+    <string>Open Tecplot file</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+O</string>
+   </property>
+  </action>
+  <action name="actionSave_Image_File">
+   <property name="text">
+    <string>Save Image File</string>
+   </property>
+   <property name="toolTip">
+    <string>Save Image File</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+S</string>
+   </property>
+  </action>
+  <action name="actionExit">
+   <property name="text">
+    <string>Exit</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Q</string>
+   </property>
+  </action>
+  <action name="actionIncrease_Interpolation">
+   <property name="text">
+    <string>Increase Interpolation</string>
+   </property>
+   <property name="toolTip">
+    <string>Increase number of interpolation (bilinear)</string>
+   </property>
+   <property name="shortcut">
+    <string>=</string>
+   </property>
+  </action>
+  <action name="actionDecrease_Interpolation">
+   <property name="text">
+    <string>Decrease Interpolation</string>
+   </property>
+   <property name="toolTip">
+    <string>Decrease number of interpolation (bilinear)</string>
+   </property>
+   <property name="shortcut">
+    <string>-</string>
+   </property>
+  </action>
+  <action name="actionAbout_FEM_Draw">
+   <property name="text">
+    <string>About FEM Draw</string>
+   </property>
+  </action>
+  <action name="actionAbout_Qt">
+   <property name="text">
+    <string>About Qt</string>
+   </property>
+  </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <customwidgets>
