--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -182,6 +182,8 @@
      <string>File</string>
     </property>
     <addaction name="actionOpen_Tecplot_File"/>
+    <addaction name="separator"/>
+    <addaction name="actionTransparent_Image"/>
     <addaction name="actionSave_Image_File"/>
     <addaction name="separator"/>
     <addaction name="actionExit"/>
@@ -264,6 +266,14 @@
   <action name="actionAbout_Qt">
    <property name="text">
     <string>About Qt</string>
+   </property>
+  </action>
+  <action name="actionTransparent_Image">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Transparent Image</string>
    </property>
   </action>
  </widget>
