Добавил буфер изображения в проект с Qt и поправил подсказки

--- a/src_qt/mainwindow.ui
+++ b/src_qt/mainwindow.ui
@@ -112,7 +112,7 @@
      </rect>
     </property>
     <property name="toolTip">
-     <string>Number of skipped values</string>
+     <string>Draw vectors for every i value</string>
     </property>
    </widget>
    <widget class="QComboBox" name="comboBox_Vectors_U">
