Унифицировал макросы и починил меню в OS X в проекте с Qt

--- a/src_qt/mainwindow.ui
+++ b/src_qt/mainwindow.ui
@@ -275,6 +275,9 @@
    <property name="shortcut">
     <string>Ctrl+Q</string>
    </property>
+   <property name="menuRole">
+    <enum>QAction::QuitRole</enum>
+   </property>
   </action>
   <action name="actionIncrease_Interpolation">
    <property name="text">
@@ -302,15 +305,24 @@
    <property name="text">
     <string>About FEM Draw...</string>
    </property>
+   <property name="menuRole">
+    <enum>QAction::AboutRole</enum>
+   </property>
   </action>
   <action name="actionAbout_Third_Party_Libraries">
    <property name="text">
     <string>About Third Party Libraries...</string>
    </property>
+   <property name="menuRole">
+    <enum>QAction::ApplicationSpecificRole</enum>
+   </property>
   </action>
   <action name="actionAbout_Qt">
    <property name="text">
     <string>About Qt...</string>
+   </property>
+   <property name="menuRole">
+    <enum>QAction::AboutQtRole</enum>
    </property>
   </action>
   <action name="actionTransparent_Image">
