--- a/src_qt/mainwindow.ui
+++ b/src_qt/mainwindow.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>FEM Draw</string>
   </property>
   <property name="windowIcon">
    <iconset resource="../resources/icon.qrc">
@@ -209,6 +209,14 @@
     <property name="title">
      <string>Configuration</string>
     </property>
+    <widget class="QMenu" name="menuLanguage">
+     <property name="title">
+      <string>Language</string>
+     </property>
+     <addaction name="actionEnglish"/>
+     <addaction name="actionRussian"/>
+    </widget>
+    <addaction name="menuLanguage"/>
     <addaction name="actionShow_Legend"/>
     <addaction name="actionUse_Light_Colors"/>
     <addaction name="actionUse_Purple_Colors"/>
@@ -383,6 +391,22 @@
   <action name="actionArrowSize">
    <property name="text">
     <string>Vectors Arrow Size...</string>
+   </property>
+  </action>
+  <action name="actionEnglish">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>English</string>
+   </property>
+  </action>
+  <action name="actionRussian">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Russian</string>
    </property>
   </action>
   <action name="actionShow_Legend">
